Runs a trivial RISC OS SWI
Tests/Legacy/build expects a Kernel_gpa and RISCOS.IMG file in the
Tests/Legacy directory, the former from RiscOS/Install/ROOL/BCM2835/RISC_OS/,
the latter being a copy of the associated image file. (The C Kernel
overwrites the HAL part of the image.)

The changes to the BCM2835 build of RISC OS are as follows:

diff --git a/hdr/KernelWS b/hdr/KernelWS
index 9b4647b..353479f 100644
--- a/hdr/KernelWS
+++ b/hdr/KernelWS
@@ -248,8 +248,13 @@ ProcVecs            * &FFFF0000
  |
 ProcVecs            * &00000000
  ]
+
+ [ CKernel
+ZeroPage            * &FFF40000
+ |
 ; Currently, zero page must be located at the processor vectors
 ZeroPage            * ProcVecs
+ ]

  [ CompatibilityPage
         ASSERT ZeroPage != 0 :LAND: ProcVecs != 0
diff --git a/hdr/Options b/hdr/Options
index c541319..12ee80a 100644
--- a/hdr/Options
+++ b/hdr/Options
@@ -162,6 +162,9 @@ DebugCDA2       SETL    {FALSE}
 HiProcVecs      SETL    "$Machine"="Tungsten" :LOR: :LNOT: NoARMv6
   ]

+                GBLL    CKernel
+CKernel         SETL    {TRUE}          ; Move KernelWS
+
                 GBLL    CompatibilityPage       ; Add a read-only page at &0 for compatibility with buggy zero page reading software
 CompatibilityPage SETL  HiProcVecs

diff --git a/s/Kernel b/s/Kernel
index 3f91b78..c0ff7e4 100644
--- a/s/Kernel
+++ b/s/Kernel
@@ -423,6 +423,37 @@ EndData
 ; SWI return handler: checks callback
 ; no branches or interlocks in the common case: V clear, no callback

+  [ CKernel
+    ; The kernel has pushed the return address onto the stack and
+    ; put the flags into lr before calling the legacy code.
+    ; Kernel legacy SWIs jump to one of these three to return.
+SLVK_SetV
+    ORR lr, lr, #(1 << 28)
+SLVK_TestV
+    ORRVS lr, lr, #(1 << 28)
+SLVK
+    LDR pc, [sp], #4
+
+SWIReturnWithCallBackFlag
+    DCD &e7f001f0
+
+BadErrPtrReturn
+    DCD &e7f001f1
+    wfi
+SVCDespatcher
+    DCD &e7f001f2
+    wfi
+SVC_CallASWI
+    DCD &e7f001f3
+    wfi
+SVC
+    

--- a/Tests/Legacy/build
+++ b/Tests/Legacy/build
@@ -25,8 +25,11 @@ SOURCES="$SYSTEM:$SUBSYSTEMS:"
 
 echo Sources: ${SOURCES//://*.c } &&
 
-# JTABLE can be found from your image's RiscOS/Sources/Kernel/bin/Kernel_gpa
 # legacy_zero_page must match ZeroPage in Sources/Kernel/hdr/KernelWS
+
+# This build expects a complete ROM image in RISCOS.IMG and Kernel_gpa
+# copied from RiscOS/Sources/Kernel/bin/Kernel_gpa or
+# /mnt/NoGit/RiscOS/Install/ROOL/BCM2835/RISC_OS/Kernel_gpa
 
 # 16MiB boot RAM
 # 256MiB minimum RAM
@@ -35,7 +38,7 @@ arm-none-eabi-gcc-9.2.1 \
         ${SOURCES//://*.c } \
         -o kernel7.elf \
         $CFLAGS \
-        -Wl,--defsym=JTABLE=0xfc0100b8 \
+        -Wl,--defsym=JTABLE=$( sed -n  's/^JTABLE *\(........\)\.\.FC.*$/0x\1/p' Kernel_gpa ) \
         -Wl,--defsym=legacy_svc_stack_top=0xff100000 \
         -Wl,--defsym=legacy_zero_page=0xfff40000 \
         \
