Using OS_Heap for heap management
OS_Heap can't be used for system_heap_allocate in the Pipe and Queue
create SWIs because they're supposed to be up to date.

Alternative solutions:
1. Queue the create SWIs
2. Create a separate pool of objects that don't need OS_Heap

Going for #2, with 64KiB pools for each at OSQueue_free_pool and
OSPipe_free_pool.

--- a/Tests/Legacy/build
+++ b/Tests/Legacy/build
@@ -1,7 +1,7 @@
 #! /bin/bash -
 
 SYSTEM=$( dirname $0 )
-SUBSYSTEMS=RawMemory:OSTask:SimpleHeap:Legacy:Modules
+SUBSYSTEMS=RawMemory:OSTask:Legacy:Modules
 
 echo Building system $SYSTEM with ${SUBSYSTEMS//:/ }
 
@@ -108,6 +108,10 @@ arm-none-eabi-gcc-9.2.1 \
         \
         -Wl,--defsym=OSTask_free_pool=0xff100000 \
         -Wl,--defsym=OSTaskSlot_free_pool=0xff200000 \
+        \
+        -Wl,--defsym=OSQueue_free_pool=0xfff90000 \
+        -Wl,--defsym=OSPipe_free_pool=0xfffa0000 \
+        \
         -Wl,--defsym=VMSAv6_Level2_Tables=0xff300000 \
         -Wl,--defsym=system_heap_base=0xff400000 \
         -Wl,--defsym=system_heap_top=0xff500000 \
