--- a/Tests/Blink/build
+++ b/Tests/Blink/build
@@ -28,6 +28,7 @@ echo Sources: ${SOURCES//://*.c }
 arm-none-eabi-gcc-9.2.1 \
         processor.boot mmu.boot \
         ${SOURCES//://*.c } \
+        romimage_end.c \
         -o kernel7.elf \
         $CFLAGS \
         -Wl,--defsym=top_of_boot_RAM=0x1000000 \
