Added logging functionality
But why are only two cores playing ball?

Tests/NoLegacy/build  -DQEMU &&
~/QEMU/build/qemu-system-arm -bios kernel7.img -machine raspi2b -serial stdio

(Reminder, you have to use a modified qemu.)

System:Modules.QA7
System:Modules.LogToUART
Entering default language: LogToUART
Loggy Switch ff100210 from 0 to 0
baaa4950
Switch ff100210 from 0 to 1
Waiting for log baaa4950
baaa4968
Log starting
Waiting for log baaa4968
aaa4950
baaa4968
Log starting
Waiting for log baLoggy Loggy Loggy Loggy Loggy Loggy Loggy Loggy Loggy

There's a lot wrong with that output.

--- a/Tests/UnitTestPipes/build
+++ b/Tests/UnitTestPipes/build
@@ -5,6 +5,8 @@ SUBSYSTEMS=RawMemory:OSTask:SimpleHeap:NoLegacy:Modules
 # Modules to include (HAL chooses which ones to load.)
 MODULES=HAL:Tests/Pipes
 
+echo Modules: ${MODULES//:/ }
+
 INITIAL_MODULES='"HAL\0Pipes\0"'
 DEFAULT_LANGUAGE='"BASIC"'
 
@@ -41,8 +43,7 @@ $OBJCOPY --rename-section .text=.init --rename-section .data=.init mmu.o mmu.boo
 
 echo Sources: ${SOURCES//://*.c }
 
-echo Modules: ${MODULES//:/ }
-
+# Cleared after the first (HAL) module built
 HALFLAGS="-DINITIAL_MODULES="$INITIAL_MODULES" -DDEFAULT_LANGUAGE=$DEFAULT_LANGUAGE " &&
 
 (
