Display is working
What needs fixing is the passing of a physical address to a SWI;
any user task could do that with any physical address, which is not
a good idea, to say the least.

Instead, I should create a pipe over the memory in question (using my
task's virtual address for it), pass the pipe to the SWI, at which point
the server may read it as a block.

Perhaps a new PipeOp, PipeOp_Reverse will allow the server to write to
the memory and the client to read it? A new creation routine could be
called PipeOp_CreateConversation?

For security, the pipe would need a reversible flag...

Incidentally, the QA7 module now uses the local timer, which re-loads itself
on reaching zero, which means it shouldn't drift. Why I didn't think it was
supported under QEMU, I don't know.

--- a/Tests/NoLegacy/build
+++ b/Tests/NoLegacy/build
@@ -9,10 +9,10 @@ MODULES=HAL:System/Pi/QA7:System/Pi/GPUMailbox:System/Pi/BCM2835Display:System/P
 echo Modules: ${MODULES//:/ }
 
 #INITIAL_MODULES='QA7\0GPUMailbox\0LEDBlink\0LogToUART\0'
-#INITIAL_MODULES='QA7\0LEDBlink\0LogToUART\0'
-INITIAL_MODULES='QA7\0GPUMailbox\0BCM2835Display\0LEDBlink\0'
-#DEFAULT_LANGUAGE=LEDBlink
-DEFAULT_LANGUAGE=DoNothing
+#INITIAL_MODULES='QA7\0LEDBlink\0'
+INITIAL_MODULES='QA7\0LEDBlink\0GPUMailbox\0BCM2835Display\0LEDBlink\0'
+DEFAULT_LANGUAGE=LEDBlink
+#DEFAULT_LANGUAGE=LogToUART
 
 # This is not a foolproof test, but it should catch some foolishness
 for i in ${INITIAL_MODULES/\\0/ } $DEFAULT_LANGUAGE ; do 
@@ -130,6 +130,8 @@ arm-none-eabi-gcc-9.2.1 \
         -Wl,--defsym=app_memory_limit=0x30000000 \
         -Wl,--defsym=pipes_base=0x80000000 \
         -Wl,--defsym=pipes_top=0xc0000000 \
+        -Wl,--defsym=frame_buffers_base=0xc0000000 \
+        -Wl,--defsym=frame_buffers_top=0xe0000000 \
         \
         -Wl,--defsym=translation_table=0xfff80000 \
         -Wl,--defsym=global_translation_table=0xfff84000 \
