Potential implementation for SynchroniseCodeAreas
Untested, not sure if sufficient.

--- a/Tests/Legacy/build
+++ b/Tests/Legacy/build
@@ -14,8 +14,8 @@ INITIAL_MODULES+='LogToUART\0'
 INITIAL_MODULES+='UtilityModule\0'
 INITIAL_MODULES+='FileSwitch\0ResourceFS\0'
 INITIAL_MODULES+='TerritoryManager\0Messages\0MessageTrans\0'
-#INITIAL_MODULES+='UK\0'
-#INITIAL_MODULES+='VFPSupport\0BASIC\0'
+INITIAL_MODULES+='UK\0'
+INITIAL_MODULES+='VFPSupport\0BASIC\0'
 #INITIAL_MODULES+='UtilityModule\0FileSwitch\0ResourceFS\0TerritoryManager\0'
 #INITIAL_MODULES+='UtilityModule\0FileSwitch\0'
 #INITIAL_MODULES+='UtilityModule\0'
