--- a/Tests/NoLegacy/build
+++ b/Tests/NoLegacy/build
@@ -11,6 +11,7 @@ echo Modules: ${MODULES//:/ }
 #INITIAL_MODULES='QA7\0GPUMailbox\0LEDBlink\0LogToUART\0'
 #INITIAL_MODULES='QA7\0LEDBlink\0'
 INITIAL_MODULES='QA7\0LEDBlink\0LogToUART\0GPUMailbox\0BCM2835Display\0'
+#INITIAL_MODULES='QA7\0LEDBlink\0LogToUART\0'
 #INITIAL_MODULES='QA7\0LEDBlink\0GPUMailbox\0BCM2835Display\0'
 DEFAULT_LANGUAGE=LEDBlink
 #DEFAULT_LANGUAGE=LogToUART
